--- a/style.css
+++ b/style.css
@@ -23,8 +23,22 @@ nav{
     align-items: center;
 
     padding: 0 25px 0 25px;
+    transition: background-color 0.3s ease-in-out;
     z-index: 1;
 }
+/* .nav-bar {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #fff;
+    
+  } */
+  .nav-bar.scrolled {
+    background-color: #073c46d3;
+  }
 .logo{
     display: flex;
     justify-content: center;
