--- a/style.css
+++ b/style.css
@@ -10,41 +10,48 @@ body{
     background-color: #073c465e;
     height: 200vh;
 }
-
+/* 
+===================================
+Navigation Bar Section
+===================================
+*/
 nav{
     position: fixed;
     top: 0;
     width: 100%;
-    height: 90px;
+    height: 75px;
     background-color: transparent;
 
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-bottom: solid 1px silver;
 
-    padding: 0 25px 0 25px;
+    /* padding: 0 0 0 25px; */
     transition: background-color 0.3s ease-in-out;
     z-index: 1;
 }
-/* .nav-bar {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background-color: #fff;
-    
-  } */
+.imageContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.imageContainer img{
+    max-width: 100%;
+    width: 80%;
+}
   .nav-bar.scrolled {
     background-color: #073c46d3;
+    /* border: none; */
   }
 .logo{
     display: flex;
     justify-content: center;
     align-items: center;
-
+    border-right: solid 1px silver;
     color: white;
+    width: 300px;
+    height: 100%;
 }
 .naviLinks{
     display: flex;
@@ -65,9 +72,28 @@ nav{
 
     padding: 0 25px;
     text-transform: uppercase;
+    font-weight: 200;
+}
+.messageContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100px;
+    height: 100%;
+    border-left: solid 1px silver;
+}
+.messageContainer i{
+    cursor: pointer;
+
 }
 
 
+/* 
+===================================
+Hero Section
+===================================
+*/
 .hero{
     position: relative;
 
@@ -104,7 +130,7 @@ nav{
     line-height: 75px;
 }
 .heroContent button{
-    width: 145px;
+    width: 180px;
     height: 40px;
 
     border: none;
@@ -114,5 +140,4 @@ nav{
     color:white;
     font-size:1.5rem;
     cursor: pointer;
-
 }
