--- a/style.css
+++ b/style.css
@@ -4,11 +4,12 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
 
 }
 body{
-    background-color: #073c465e;
-    height: 200vh;
+    /* background-color: #073c465e; */
+    /* height: 200vh; */
 }
 /* 
 ===================================
@@ -44,7 +45,10 @@ nav{
     background-color: #073c46d3;
     /* border: none; */
   }
-.logo{
+  .logo{
+    height: 100%;
+  }
+.logo a{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -52,6 +56,7 @@ nav{
     color: white;
     width: 300px;
     height: 100%;
+    text-decoration: none;
 }
 .naviLinks{
     display: flex;
@@ -101,7 +106,7 @@ Hero Section
     height: 100vh;
     overflow: hidden;
 
-    background-image:linear-gradient(rgba(0, 0, 0, 0.593), #073c46d3), url(./hero.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.593), #073c46e6), url(./hero.jpg);
     background-color: black;
     background-repeat: no-repeat;
     background-size: 100%;
@@ -120,7 +125,7 @@ Hero Section
 
 .heroContent p{
     font-size: 1.6rem;
-    font-weight: 600;
+    font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 2px;
 }
@@ -140,4 +145,49 @@ Hero Section
     color:white;
     font-size:1.5rem;
     cursor: pointer;
+}
+
+
+/* 
+===================================
+Body 1st Section
+===================================
+*/
+
+.firstBody{
+    /* height: 100vh; */
+    width: 100%;
+    height: 90vh;
+    color: black;
+    z-index: 4;
+    padding: 50px;
+
+    display: flex;
+    justify-content: center;
+    place-content: center;
+}
+.txtContent{
+    padding: 45px;
+    text-align: end;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+    gap: 20px;
+}
+.txtContent h1{
+    font-size: 4.3rem;
+    font-weight: 200;
+    text-transform: uppercase;
+}
+.imgContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.imgContent img{
+    max-height: 100%;
+    height: 100%;
 }
