--- a/style.css
+++ b/style.css
@@ -124,11 +124,11 @@ Hero Section
 }
 @keyframes hero {
 	0% {
-		opacity: 0;
+		transform: translateX(-30px)
 	}
 
 	100% {
-		opacity: 1;
+		transform: translateX(0)
 	}
 }
 .heroContent p{
@@ -136,13 +136,13 @@ Hero Section
     font-weight: 300;
     text-transform: uppercase;
     letter-spacing: 2px;
-    animation: hero .8s ease 0s 1 normal forwards;
+    animation: hero .3s ease .3s 1 normal forwards;
 }
 .heroContent h1{
     font-size: 5rem;
     font-weight: 400;
     line-height: 95px;
-    animation: hero 1.2s ease 0s 1 normal forwards;
+    animation: hero .5s ease .3s 1 normal forwards;
 }
 .heroContent button{
     width: 180px;
@@ -155,7 +155,7 @@ Hero Section
     color:white;
     font-size:1.5rem;
     cursor: pointer;
-    animation: hero 1.7s ease 0s 1 normal forwards;
+    animation: hero 1s ease .3s 1 normal forwards;
 }
 
 
