--- a/style.css
+++ b/style.css
@@ -231,3 +231,12 @@ Body 1st Section
     font-size: 38px;
     
 }
+
+/* 
+===================================
+Body 2nd Section
+===================================
+*/
+.secBody{
+    background:linear-gradient( rgba(0, 0, 0, 0), #21748494);
+}
