--- a/style.css
+++ b/style.css
@@ -8,9 +8,12 @@
 
 }
 /* body{
-    background-color: #073c465e;
+    background-color: #073c461f;
     height: 200vh;
 } */
+.body-container{
+    background:linear-gradient( rgba(0, 0, 0, 0), #217484a3);
+}
 /* 
 ===================================
 Navigation Bar Section
@@ -237,9 +240,9 @@ Body 1st Section
 Body 2nd Section
 ===================================
 */
-.thirBody{
+/* .thirBody{
     background:linear-gradient( rgba(0, 0, 0, 0), #217484ca);
-}
+} */
 /* .thirBody{
     background:linear-gradient( #21748494,  rgba(0, 0, 0, 0));
 } */
@@ -251,8 +254,9 @@ Footer
 ===================================
 */
 footer{
-    background: linear-gradient(#217484ca, #073c46e6) ;
-    border-top: solid 1px silver;
+    /* background: linear-gradient(#217484ca, #073c46e6) ; */
+    background-color: #073c46d3;
+    /* border-top: solid 1px silver; */
     height: 30vh;
     display: grid;
     grid-template-columns: 33.33% 33.33% 33.33%;
