--- a/style.css
+++ b/style.css
@@ -283,5 +283,25 @@ footer .footlogo{
     text-decoration: none;
     color: white;
     text-transform: uppercase;
+}
+.contacts{
+    display: flex;
+    gap: 50px;
+}
+.contacts a {
+    text-decoration: none;
+    height: 50px;
+    width: 50px;
+    color: white;
+    font-size: 1.7rem;
+    transition: .2s ease-in ;
+    border-radius: 10px;
 
+    display: grid;
+    place-items: center;
+}
+.contacts a:hover{
+    color: #073a46;
+    background-color: white;
+    font-size: 2rem;
 }
