--- a/style.css
+++ b/style.css
@@ -325,3 +325,39 @@ footer .footlogo{
     background-color: white;
     font-size: 2rem;
 }
+
+/* ================================================================ 
+================================================================ */
+
+
+/* 
+===================================
+About Us Page
+===================================
+*/
+.pagesHero{
+    width: 100%;
+    height: 70vh;
+
+    background-image: url('./abouthero.jpg');
+    background-size: cover;
+    background-position: center;
+    /* opacity: 0.3; */
+}
+.heroContainer{
+    width: 100%;
+    height: 100%;
+
+    background-color: #073c46d3;
+}
+
+.heroTitle{
+    width: 100%;
+    height: 100% ;
+
+    display: grid;
+    place-items: center;
+    color: white;
+    padding-top: 15%;
+  
+}
