--- a/style.css
+++ b/style.css
@@ -361,3 +361,72 @@ About Us Page
     padding-top: 15%;
   
 }
+
+
+/* 
+===================================
+Services
+===================================
+*/
+
+.serviceHero{
+    width: 100%;
+    height: 70vh;
+
+    background-image: url('./serviceshero.jpg') !important;
+    background-size: cover;
+    background-position: center;
+    /* opacity: 0.3; */
+}
+.serviceContainer{
+    width: 100%;
+    height: 100%;
+
+    background-color: #073c46d3;
+}
+
+.serviceHeroTitle{
+    width: 100%;
+    height: 100% ;
+
+    display: grid;
+    place-items: center;
+    color: white;
+    padding-top: 15%;
+  
+}
+
+
+
+/* 
+===================================
+Contact
+===================================
+*/
+
+.contactHero{
+    width: 100%;
+    height: 70vh;
+
+    background-image: url('./contacthero.jpg') !important;
+    background-size: cover;
+    background-position: center;
+    /* opacity: 0.3; */
+}
+.contactContainer{
+    width: 100%;
+    height: 100%;
+
+    background-color: #073c46d3;
+}
+
+.contactheroTitle{
+    width: 100%;
+    height: 100% ;
+
+    display: grid;
+    place-items: center;
+    color: white;
+    padding-top: 15%;
+  
+}
