--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ Body 1st Section
     padding: 50px;
 
     display: flex;
+    /* flex-wrap: wrap; */
     justify-content: center;
     place-content: center;
 }
