--- a/responsiveness.css
+++ b/responsiveness.css
@@ -1,8 +1,20 @@
 /* Homepage */
 
 @media screen and (min-width:768px) and (max-width: 1023px) {
+    nav{
+        height: 150px;
+    }
     .naviLinks{
         display:none;
+    }
+    .hero{
+        background-size: 225%;
+    }
+    .heroContent{
+        width: 83%;
+        top: 65%;
+        left:7%;
+        transform: translateY(-65%);
     }
     .firstBody{
         flex-wrap:wrap-reverse;
